Fix histogram not showing first line

--- a/src/css/histogram.css
+++ b/src/css/histogram.css
@@ -1,4 +1,6 @@
-
+.bp3-dark {
+    background: #293742;
+}
 
 .bp3-progress-bar.bp3-histogram {
     border-radius: 0px;
@@ -40,3 +42,4 @@ td {
   max-width: 8em;
   word-break: break-all;
 }
+
